Move files around

--- a/docs/docs/components/modals/index.html
+++ b/docs/docs/components/modals/index.html
@@ -20,16 +20,15 @@
 <meta property="og:description" content="The less formal CSS framework">
 
 
-<meta name="generator" content="Hugo 0.53" />
+<meta name="generator" content="Hugo 0.54.0" />
 
 
   <title>Modals | Fractal Tree • CeSIUM</title>
   <link rel='canonical' href='https://cesium.github.io/fractal-tree/docs/components/modals/'>
 
   
-<link rel='stylesheet' href='https://unpkg.com/papercss@1.6.0/dist/paper.min.css'>
+<link rel='stylesheet' href='assets/paper.min.css'>
 <link rel='stylesheet' href='assets/demo.css'>
-
 </head>
 
 
@@ -48,7 +47,7 @@
             </div>
 
             <div class="row flex-center child-borders">
-  <a class='paper-btn margin' href='/fractal-tree/'>Snake Game</a>
+  <a class='paper-btn margin' href='/fractal-tree/'>Fractal Tree</a>
   <a class='paper-btn margin' href='/fractal-tree/docs/'>Documentation</a>
   <a class='paper-btn margin' href='/fractal-tree/about/'>About Us</a>
   
