Modify website layout

--- a/docs/docs/components/badges/index.html
+++ b/docs/docs/components/badges/index.html
@@ -27,8 +27,8 @@
   <link rel='canonical' href='https://cesium.github.io/fractal-tree/docs/components/badges/'>
 
   
-<link rel='stylesheet' href='assets/paper.min.css'>
-<link rel='stylesheet' href='assets/demo.css'>
+<link rel='stylesheet' href='https://cesium.github.io/fractal-tree/assets/paper.min.css'>
+<link rel='stylesheet' href='https://cesium.github.io/fractal-tree/assets/demo.css'>
 </head>
 
 
@@ -36,7 +36,7 @@
 
 <body>
   <div id='top' class='row site'>
-    <div class='sm-12 md-8 col'>
+    <div class='sm-12 md-12 col'>
         <div class='paper'>
           <div class='demo-title'>
             <div class='row flex-center'>
@@ -48,10 +48,9 @@
 
             <div class="row flex-center child-borders">
   <a class='paper-btn margin' href='/fractal-tree/'>Fractal Tree</a>
-  <a class='paper-btn margin' href='/fractal-tree/docs/'>Documentation</a>
   <a class='paper-btn margin' href='/fractal-tree/about/'>About Us</a>
   
-  <a href="https://github.com/rhyneav/papercss" target="_blank" class="paper-btn margin">Github</a>
+  <a href="https://github.com/cesium/fractal-tree" target="_blank" class="paper-btn margin">Github</a>
 </div>
 
           </div>
@@ -81,150 +80,18 @@
 <h6 id="example-h6-heading-span-class-badge-123-span">Example h6 heading <span class="badge">123</span></h6>
 
 <h4 id="code">Code:</h4>
-<div class="highlight"><pre style="background-color:#f8f8f8;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;<span style="color:#008000;font-weight:bold">h1</span>&gt;Example h1 heading &lt;<span style="color:#008000;font-weight:bold">span</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;badge&#34;</span>&gt;123&lt;/<span style="color:#008000;font-weight:bold">span</span>&gt;&lt;/<span style="color:#008000;font-weight:bold">h1</span>&gt;
-&lt;<span style="color:#008000;font-weight:bold">h2</span>&gt;Example h2 heading &lt;<span style="color:#008000;font-weight:bold">span</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;badge secondary&#34;</span>&gt;123&lt;/<span style="color:#008000;font-weight:bold">span</span>&gt;&lt;/<span style="color:#008000;font-weight:bold">h2</span>&gt;
-&lt;<span style="color:#008000;font-weight:bold">h3</span>&gt;Example h3 heading &lt;<span style="color:#008000;font-weight:bold">span</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;badge success&#34;</span>&gt;123&lt;/<span style="color:#008000;font-weight:bold">span</span>&gt;&lt;/<span style="color:#008000;font-weight:bold">h3</span>&gt;
-&lt;<span style="color:#008000;font-weight:bold">h4</span>&gt;Example h4 heading &lt;<span style="color:#008000;font-weight:bold">span</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;badge warning&#34;</span>&gt;123&lt;/<span style="color:#008000;font-weight:bold">span</span>&gt;&lt;/<span style="color:#008000;font-weight:bold">h4</span>&gt;
-&lt;<span style="color:#008000;font-weight:bold">h5</span>&gt;Example h5 heading &lt;<span style="color:#008000;font-weight:bold">span</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;badge danger&#34;</span>&gt;123&lt;/<span style="color:#008000;font-weight:bold">span</span>&gt;&lt;/<span style="color:#008000;font-weight:bold">h5</span>&gt;
-&lt;<span style="color:#008000;font-weight:bold">h6</span>&gt;Example h6 heading &lt;<span style="color:#008000;font-weight:bold">span</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;badge&#34;</span>&gt;123&lt;/<span style="color:#008000;font-weight:bold">span</span>&gt;&lt;/<span style="color:#008000;font-weight:bold">h6</span>&gt;</code></pre></div>
+<div class="highlight"><pre style="background-color:#fff;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;h1&gt;Example h1 heading &lt;span class=<span style="color:#a31515">&#34;badge&#34;</span>&gt;123&lt;/span&gt;&lt;/h1&gt;
+&lt;h2&gt;Example h2 heading &lt;span class=<span style="color:#a31515">&#34;badge secondary&#34;</span>&gt;123&lt;/span&gt;&lt;/h2&gt;
+&lt;h3&gt;Example h3 heading &lt;span class=<span style="color:#a31515">&#34;badge success&#34;</span>&gt;123&lt;/span&gt;&lt;/h3&gt;
+&lt;h4&gt;Example h4 heading &lt;span class=<span style="color:#a31515">&#34;badge warning&#34;</span>&gt;123&lt;/span&gt;&lt;/h4&gt;
+&lt;h5&gt;Example h5 heading &lt;span class=<span style="color:#a31515">&#34;badge danger&#34;</span>&gt;123&lt;/span&gt;&lt;/h5&gt;
+&lt;h6&gt;Example h6 heading &lt;span class=<span style="color:#a31515">&#34;badge&#34;</span>&gt;123&lt;/span&gt;&lt;/h6&gt;</code></pre></div>
 </div>
 
         </div>
     </div>
-    <div class='sm-12 md-4 col sidebar'>
     
-    <div class='paper'>
-      <h3 class='sidebar-title' style='text-align:center'>
-        <a href='/docs'>Documentation</a>
-      </h3>
-      <div class='row'>
-        
-        <div class='collapsible full-width'>
-          <input id='collapsible-components' type='radio' name='collapsible'>
-          <label for="collapsible-components">Components</label>
-          <div class="collapsible-body">
-            <ul>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/alerts/'>Alerts</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/articles/'>Articles</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/badges/'>Badges</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/buttons/'>Buttons</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/cards/'>Cards</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/collapsible/'>Collapsibles</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/forms/'>Forms</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/modals/'>Modals</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/navbar/'>Navbar</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/popovers/'>Popovers</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/progress/'>Progress</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/tabs/'>Tabs</a>
-              </li>
-            
-            </ul>
-          </div>
-        </div>
-        
-        <div class='collapsible full-width'>
-          <input id='collapsible-content' type='radio' name='collapsible'>
-          <label for="collapsible-content">Content</label>
-          <div class="collapsible-body">
-            <ul>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/code/'>Code</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/images/'>Images</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/lists/'>Lists</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/tables/'>Tables</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/typography/'>Typography</a>
-              </li>
-            
-            </ul>
-          </div>
-        </div>
-        
-        <div class='collapsible full-width'>
-          <input id='collapsible-layout' type='radio' name='collapsible'>
-          <label for="collapsible-layout">Layout</label>
-          <div class="collapsible-body">
-            <ul>
-            
-              <li>
-                <a href='/fractal-tree/docs/layout/flexbox/'>Flexbox</a>
-              </li>
-            
-            </ul>
-          </div>
-        </div>
-        
-        <div class='collapsible full-width'>
-          <input id='collapsible-utilities' type='radio' name='collapsible'>
-          <label for="collapsible-utilities">Utilities</label>
-          <div class="collapsible-body">
-            <ul>
-            
-              <li>
-                <a href='/fractal-tree/docs/utilities/borders/'>Borders &amp; Shadows</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/utilities/colors/'>Colors</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/utilities/spacing/'>Spacing</a>
-              </li>
-            
-            </ul>
-          </div>
-        </div>
-        
-      </div>
-    </div>
+<div class='sm-12 md-12 col'>
     
     <div class='paper'>
       <div class="row flex-center">
