--- a/src/layouts/partials/nav/main.html
+++ b/src/layouts/partials/nav/main.html
@@ -5,5 +5,5 @@
       {{- .Name -}}
     </a>
   {{ end }}
-  <a href="https://github.com/rhyneav/papercss" target="_blank" class="paper-btn margin">Github</a>
+  <a href="https://github.com/cesium/fractal-tree" target="_blank" class="paper-btn margin">Github</a>
 </div>
