--- a/src/layouts/partials/nav/sidebar.html
+++ b/src/layouts/partials/nav/sidebar.html
@@ -1,5 +1,6 @@
-<div class='sm-12 md-4 col sidebar'>
-    {{ range .Site.Sections }}
+<!-- <div class='sm-12 md-4 col sidebar'> -->
+<div class='sm-12 md-12 col'>
+    <!-- {{ range .Site.Sections }}
     <div class='paper'>
       <h3 class='sidebar-title' style='text-align:center'>
         <a href='/docs'>Documentation</a>
@@ -22,7 +23,7 @@
         {{ end }}
       </div>
     </div>
-    {{ end }}
+    {{ end }} -->
     <div class='paper'>
       <div class="row flex-center">
         <p>Made with 🧡 by <a href="http://www.cesium.di.uminho.pt/" target="_blank">CeSIUM</a> using the <a href="https://github.com/rhyneav/papercss/">PaperCSS framework</a>.</p>
