--- a/docs/docs/components/alerts/index.html
+++ b/docs/docs/components/alerts/index.html
@@ -27,8 +27,8 @@
   <link rel='canonical' href='https://cesium.github.io/fractal-tree/docs/components/alerts/'>
 
   
-<link rel='stylesheet' href='assets/paper.min.css'>
-<link rel='stylesheet' href='assets/demo.css'>
+<link rel='stylesheet' href='https://cesium.github.io/fractal-tree/assets/paper.min.css'>
+<link rel='stylesheet' href='https://cesium.github.io/fractal-tree/assets/demo.css'>
 </head>
 
 
@@ -36,7 +36,7 @@
 
 <body>
   <div id='top' class='row site'>
-    <div class='sm-12 md-8 col'>
+    <div class='sm-12 md-12 col'>
         <div class='paper'>
           <div class='demo-title'>
             <div class='row flex-center'>
@@ -48,10 +48,9 @@
 
             <div class="row flex-center child-borders">
   <a class='paper-btn margin' href='/fractal-tree/'>Fractal Tree</a>
-  <a class='paper-btn margin' href='/fractal-tree/docs/'>Documentation</a>
   <a class='paper-btn margin' href='/fractal-tree/about/'>About Us</a>
   
-  <a href="https://github.com/rhyneav/papercss" target="_blank" class="paper-btn margin">Github</a>
+  <a href="https://github.com/cesium/fractal-tree" target="_blank" class="paper-btn margin">Github</a>
 </div>
 
           </div>
@@ -85,13 +84,13 @@
 </div>
 
 <h4 id="code">Code:</h4>
-<div class="highlight"><pre style="background-color:#f8f8f8;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;row flex-spaces&#34;</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert alert-primary&#34;</span>&gt;Alert-primary&lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert alert-secondary&#34;</span>&gt;Alert-secondary&lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert alert-success&#34;</span>&gt;Alert-success&lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert alert-warning&#34;</span>&gt;Alert-warning&lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert alert-danger&#34;</span>&gt;Alert-danger&lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;
-&lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;</code></pre></div>
+<div class="highlight"><pre style="background-color:#fff;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;div class=<span style="color:#a31515">&#34;row flex-spaces&#34;</span>&gt;
+  &lt;div class=<span style="color:#a31515">&#34;alert alert-primary&#34;</span>&gt;Alert-primary&lt;/div&gt;
+  &lt;div class=<span style="color:#a31515">&#34;alert alert-secondary&#34;</span>&gt;Alert-secondary&lt;/div&gt;
+  &lt;div class=<span style="color:#a31515">&#34;alert alert-success&#34;</span>&gt;Alert-success&lt;/div&gt;
+  &lt;div class=<span style="color:#a31515">&#34;alert alert-warning&#34;</span>&gt;Alert-warning&lt;/div&gt;
+  &lt;div class=<span style="color:#a31515">&#34;alert alert-danger&#34;</span>&gt;Alert-danger&lt;/div&gt;
+&lt;/div&gt;</code></pre></div>
 <h3 id="dismissible-alerts">Dismissible alerts</h3>
 
 <div class="row flex-spaces">
@@ -123,171 +122,39 @@
 </div>
 
 <h4 id="code-1">Code:</h4>
-<div class="highlight"><pre style="background-color:#f8f8f8;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;row flex-spaces&#34;</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">input</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert-state&#34;</span> <span style="color:#b44">id</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert-1&#34;</span> <span style="color:#b44">type</span><span style="color:#666">=</span><span style="color:#b44">&#34;checkbox&#34;</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert alert-primary dismissible&#34;</span>&gt;
+<div class="highlight"><pre style="background-color:#fff;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;div class=<span style="color:#a31515">&#34;row flex-spaces&#34;</span>&gt;
+  &lt;input class=<span style="color:#a31515">&#34;alert-state&#34;</span> id=<span style="color:#a31515">&#34;alert-1&#34;</span> type=<span style="color:#a31515">&#34;checkbox&#34;</span>&gt;
+  &lt;div class=<span style="color:#a31515">&#34;alert alert-primary dismissible&#34;</span>&gt;
     Alert-primary
-    &lt;<span style="color:#008000;font-weight:bold">label</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;btn-close&#34;</span> <span style="color:#b44">for</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert-1&#34;</span>&gt;X&lt;/<span style="color:#008000;font-weight:bold">label</span>&gt;
-  &lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">input</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert-state&#34;</span> <span style="color:#b44">id</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert-2&#34;</span> <span style="color:#b44">type</span><span style="color:#666">=</span><span style="color:#b44">&#34;checkbox&#34;</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert alert-secondary dismissible&#34;</span>&gt;
+    &lt;label class=<span style="color:#a31515">&#34;btn-close&#34;</span> for=<span style="color:#a31515">&#34;alert-1&#34;</span>&gt;X&lt;/label&gt;
+  &lt;/div&gt;
+  &lt;input class=<span style="color:#a31515">&#34;alert-state&#34;</span> id=<span style="color:#a31515">&#34;alert-2&#34;</span> type=<span style="color:#a31515">&#34;checkbox&#34;</span>&gt;
+  &lt;div class=<span style="color:#a31515">&#34;alert alert-secondary dismissible&#34;</span>&gt;
     Alert-secondary
-    &lt;<span style="color:#008000;font-weight:bold">label</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;btn-close&#34;</span> <span style="color:#b44">for</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert-2&#34;</span>&gt;X&lt;/<span style="color:#008000;font-weight:bold">label</span>&gt;
-  &lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">input</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert-state&#34;</span> <span style="color:#b44">id</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert-3&#34;</span> <span style="color:#b44">type</span><span style="color:#666">=</span><span style="color:#b44">&#34;checkbox&#34;</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert alert-success dismissible&#34;</span>&gt;
+    &lt;label class=<span style="color:#a31515">&#34;btn-close&#34;</span> for=<span style="color:#a31515">&#34;alert-2&#34;</span>&gt;X&lt;/label&gt;
+  &lt;/div&gt;
+  &lt;input class=<span style="color:#a31515">&#34;alert-state&#34;</span> id=<span style="color:#a31515">&#34;alert-3&#34;</span> type=<span style="color:#a31515">&#34;checkbox&#34;</span>&gt;
+  &lt;div class=<span style="color:#a31515">&#34;alert alert-success dismissible&#34;</span>&gt;
     Alert-success
-    &lt;<span style="color:#008000;font-weight:bold">label</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;btn-close&#34;</span> <span style="color:#b44">for</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert-3&#34;</span>&gt;X&lt;/<span style="color:#008000;font-weight:bold">label</span>&gt;
-  &lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">input</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert-state&#34;</span> <span style="color:#b44">id</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert-4&#34;</span> <span style="color:#b44">type</span><span style="color:#666">=</span><span style="color:#b44">&#34;checkbox&#34;</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert alert-warning dismissible&#34;</span>&gt;
+    &lt;label class=<span style="color:#a31515">&#34;btn-close&#34;</span> for=<span style="color:#a31515">&#34;alert-3&#34;</span>&gt;X&lt;/label&gt;
+  &lt;/div&gt;
+  &lt;input class=<span style="color:#a31515">&#34;alert-state&#34;</span> id=<span style="color:#a31515">&#34;alert-4&#34;</span> type=<span style="color:#a31515">&#34;checkbox&#34;</span>&gt;
+  &lt;div class=<span style="color:#a31515">&#34;alert alert-warning dismissible&#34;</span>&gt;
     Alert-warning
-    &lt;<span style="color:#008000;font-weight:bold">label</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;btn-close&#34;</span> <span style="color:#b44">for</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert-4&#34;</span>&gt;X&lt;/<span style="color:#008000;font-weight:bold">label</span>&gt;
-  &lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">input</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert-state&#34;</span> <span style="color:#b44">id</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert-5&#34;</span> <span style="color:#b44">type</span><span style="color:#666">=</span><span style="color:#b44">&#34;checkbox&#34;</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert alert-danger dismissible&#34;</span>&gt;
+    &lt;label class=<span style="color:#a31515">&#34;btn-close&#34;</span> for=<span style="color:#a31515">&#34;alert-4&#34;</span>&gt;X&lt;/label&gt;
+  &lt;/div&gt;
+  &lt;input class=<span style="color:#a31515">&#34;alert-state&#34;</span> id=<span style="color:#a31515">&#34;alert-5&#34;</span> type=<span style="color:#a31515">&#34;checkbox&#34;</span>&gt;
+  &lt;div class=<span style="color:#a31515">&#34;alert alert-danger dismissible&#34;</span>&gt;
     Alert-danger
-    &lt;<span style="color:#008000;font-weight:bold">label</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;btn-close&#34;</span> <span style="color:#b44">for</span><span style="color:#666">=</span><span style="color:#b44">&#34;alert-5&#34;</span>&gt;X&lt;/<span style="color:#008000;font-weight:bold">label</span>&gt;
-  &lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;
-&lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;</code></pre></div>
+    &lt;label class=<span style="color:#a31515">&#34;btn-close&#34;</span> for=<span style="color:#a31515">&#34;alert-5&#34;</span>&gt;X&lt;/label&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</code></pre></div>
 </div>
 
         </div>
     </div>
-    <div class='sm-12 md-4 col sidebar'>
     
-    <div class='paper'>
-      <h3 class='sidebar-title' style='text-align:center'>
-        <a href='/docs'>Documentation</a>
-      </h3>
-      <div class='row'>
-        
-        <div class='collapsible full-width'>
-          <input id='collapsible-components' type='radio' name='collapsible'>
-          <label for="collapsible-components">Components</label>
-          <div class="collapsible-body">
-            <ul>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/alerts/'>Alerts</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/articles/'>Articles</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/badges/'>Badges</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/buttons/'>Buttons</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/cards/'>Cards</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/collapsible/'>Collapsibles</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/forms/'>Forms</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/modals/'>Modals</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/navbar/'>Navbar</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/popovers/'>Popovers</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/progress/'>Progress</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/tabs/'>Tabs</a>
-              </li>
-            
-            </ul>
-          </div>
-        </div>
-        
-        <div class='collapsible full-width'>
-          <input id='collapsible-content' type='radio' name='collapsible'>
-          <label for="collapsible-content">Content</label>
-          <div class="collapsible-body">
-            <ul>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/code/'>Code</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/images/'>Images</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/lists/'>Lists</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/tables/'>Tables</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/typography/'>Typography</a>
-              </li>
-            
-            </ul>
-          </div>
-        </div>
-        
-        <div class='collapsible full-width'>
-          <input id='collapsible-layout' type='radio' name='collapsible'>
-          <label for="collapsible-layout">Layout</label>
-          <div class="collapsible-body">
-            <ul>
-            
-              <li>
-                <a href='/fractal-tree/docs/layout/flexbox/'>Flexbox</a>
-              </li>
-            
-            </ul>
-          </div>
-        </div>
-        
-        <div class='collapsible full-width'>
-          <input id='collapsible-utilities' type='radio' name='collapsible'>
-          <label for="collapsible-utilities">Utilities</label>
-          <div class="collapsible-body">
-            <ul>
-            
-              <li>
-                <a href='/fractal-tree/docs/utilities/borders/'>Borders &amp; Shadows</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/utilities/colors/'>Colors</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/utilities/spacing/'>Spacing</a>
-              </li>
-            
-            </ul>
-          </div>
-        </div>
-        
-      </div>
-    </div>
+<div class='sm-12 md-12 col'>
     
     <div class='paper'>
       <div class="row flex-center">
