--- a/docs/docs/components/buttons/index.html
+++ b/docs/docs/components/buttons/index.html
@@ -27,8 +27,8 @@
   <link rel='canonical' href='https://cesium.github.io/fractal-tree/docs/components/buttons/'>
 
   
-<link rel='stylesheet' href='assets/paper.min.css'>
-<link rel='stylesheet' href='assets/demo.css'>
+<link rel='stylesheet' href='https://cesium.github.io/fractal-tree/assets/paper.min.css'>
+<link rel='stylesheet' href='https://cesium.github.io/fractal-tree/assets/demo.css'>
 </head>
 
 
@@ -36,7 +36,7 @@
 
 <body>
   <div id='top' class='row site'>
-    <div class='sm-12 md-8 col'>
+    <div class='sm-12 md-12 col'>
         <div class='paper'>
           <div class='demo-title'>
             <div class='row flex-center'>
@@ -48,10 +48,9 @@
 
             <div class="row flex-center child-borders">
   <a class='paper-btn margin' href='/fractal-tree/'>Fractal Tree</a>
-  <a class='paper-btn margin' href='/fractal-tree/docs/'>Documentation</a>
   <a class='paper-btn margin' href='/fractal-tree/about/'>About Us</a>
   
-  <a href="https://github.com/rhyneav/papercss" target="_blank" class="paper-btn margin">Github</a>
+  <a href="https://github.com/cesium/fractal-tree" target="_blank" class="paper-btn margin">Github</a>
 </div>
 
           </div>
@@ -81,18 +80,18 @@
 <button disabled>Disabled</button></p>
 
 <h4 id="code">Code:</h4>
-<div class="highlight"><pre style="background-color:#f8f8f8;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;<span style="color:#008000;font-weight:bold">p</span>&gt;Inspired by &lt;<span style="color:#008000;font-weight:bold">a</span> <span style="color:#b44">href</span><span style="color:#666">=</span><span style="color:#b44">&#34;https://codepen.io/tmrDevelops/pen/VeRvKX&#34;</span> <span style="color:#b44">target</span><span style="color:#666">=</span><span style="color:#b44">&#34;_blank&#34;</span>&gt;Imperfect Buttons&lt;/<span style="color:#008000;font-weight:bold">a</span>&gt;&lt;/<span style="color:#008000;font-weight:bold">p</span>&gt;
-&lt;<span style="color:#008000;font-weight:bold">button</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;btn-large&#34;</span>&gt;Large&lt;/<span style="color:#008000;font-weight:bold">button</span>&gt;
-&lt;<span style="color:#008000;font-weight:bold">button</span>&gt;Default&lt;/<span style="color:#008000;font-weight:bold">button</span>&gt;
-&lt;<span style="color:#008000;font-weight:bold">button</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;btn-small&#34;</span>&gt;Small&lt;/<span style="color:#008000;font-weight:bold">button</span>&gt;
-&lt;<span style="color:#008000;font-weight:bold">a</span> <span style="color:#b44">href</span><span style="color:#666">=</span><span style="color:#b44">&#34;#&#34;</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;paper-btn&#34;</span>&gt;Link&lt;/<span style="color:#008000;font-weight:bold">a</span>&gt;
-&lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;row&#34;</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;col-6 col&#34;</span>&gt;
-    &lt;<span style="color:#008000;font-weight:bold">button</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;btn-block&#34;</span>&gt;Block level&lt;/<span style="color:#008000;font-weight:bold">button</span>&gt;
-  &lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;
-&lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;
-&lt;<span style="color:#008000;font-weight:bold">button</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;disabled&#34;</span>&gt;Disabled&lt;/<span style="color:#008000;font-weight:bold">button</span>&gt;
-&lt;<span style="color:#008000;font-weight:bold">button</span> <span style="color:#b44">disabled</span>&gt;Disabled&lt;/<span style="color:#008000;font-weight:bold">button</span>&gt;</code></pre></div>
+<div class="highlight"><pre style="background-color:#fff;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;p&gt;Inspired by &lt;a href=<span style="color:#a31515">&#34;https://codepen.io/tmrDevelops/pen/VeRvKX&#34;</span> target=<span style="color:#a31515">&#34;_blank&#34;</span>&gt;Imperfect Buttons&lt;/a&gt;&lt;/p&gt;
+&lt;button class=<span style="color:#a31515">&#34;btn-large&#34;</span>&gt;Large&lt;/button&gt;
+&lt;button&gt;Default&lt;/button&gt;
+&lt;button class=<span style="color:#a31515">&#34;btn-small&#34;</span>&gt;Small&lt;/button&gt;
+&lt;a href=<span style="color:#a31515">&#34;#&#34;</span> class=<span style="color:#a31515">&#34;paper-btn&#34;</span>&gt;Link&lt;/a&gt;
+&lt;div class=<span style="color:#a31515">&#34;row&#34;</span>&gt;
+  &lt;div class=<span style="color:#a31515">&#34;col-6 col&#34;</span>&gt;
+    &lt;button class=<span style="color:#a31515">&#34;btn-block&#34;</span>&gt;Block level&lt;/button&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+&lt;button class=<span style="color:#a31515">&#34;disabled&#34;</span>&gt;Disabled&lt;/button&gt;
+&lt;button disabled&gt;Disabled&lt;/button&gt;</code></pre></div>
 <h3 id="colors">Colors</h3>
 
 <p><input type="button" class="paper-btn btn-primary" value="Primary"/>
@@ -102,149 +101,17 @@
 <button class="btn-danger">Danger</button></p>
 
 <h4 id="code-1">Code:</h4>
-<div class="highlight"><pre style="background-color:#f8f8f8;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;<span style="color:#008000;font-weight:bold">input</span> <span style="color:#b44">type</span><span style="color:#666">=</span><span style="color:#b44">&#34;button&#34;</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;paper-btn btn-primary&#34;</span> <span style="color:#b44">value</span><span style="color:#666">=</span><span style="color:#b44">&#34;Primary&#34;</span>/&gt;
-&lt;<span style="color:#008000;font-weight:bold">input</span> <span style="color:#b44">type</span><span style="color:#666">=</span><span style="color:#b44">&#34;button&#34;</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;btn-secondary&#34;</span> <span style="color:#b44">value</span><span style="color:#666">=</span><span style="color:#b44">&#34;Secondary&#34;</span>/&gt;
-&lt;<span style="color:#008000;font-weight:bold">button</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;btn-success&#34;</span>&gt;Success&lt;/<span style="color:#008000;font-weight:bold">button</span>&gt;
-&lt;<span style="color:#008000;font-weight:bold">button</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;btn-warning&#34;</span>&gt;Warning&lt;/<span style="color:#008000;font-weight:bold">button</span>&gt;
-&lt;<span style="color:#008000;font-weight:bold">button</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;btn-danger&#34;</span>&gt;Danger&lt;/<span style="color:#008000;font-weight:bold">button</span>&gt;</code></pre></div>
+<div class="highlight"><pre style="background-color:#fff;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;input type=<span style="color:#a31515">&#34;button&#34;</span> class=<span style="color:#a31515">&#34;paper-btn btn-primary&#34;</span> value=<span style="color:#a31515">&#34;Primary&#34;</span>/&gt;
+&lt;input type=<span style="color:#a31515">&#34;button&#34;</span> class=<span style="color:#a31515">&#34;btn-secondary&#34;</span> value=<span style="color:#a31515">&#34;Secondary&#34;</span>/&gt;
+&lt;button class=<span style="color:#a31515">&#34;btn-success&#34;</span>&gt;Success&lt;/button&gt;
+&lt;button class=<span style="color:#a31515">&#34;btn-warning&#34;</span>&gt;Warning&lt;/button&gt;
+&lt;button class=<span style="color:#a31515">&#34;btn-danger&#34;</span>&gt;Danger&lt;/button&gt;</code></pre></div>
 </div>
 
         </div>
     </div>
-    <div class='sm-12 md-4 col sidebar'>
     
-    <div class='paper'>
-      <h3 class='sidebar-title' style='text-align:center'>
-        <a href='/docs'>Documentation</a>
-      </h3>
-      <div class='row'>
-        
-        <div class='collapsible full-width'>
-          <input id='collapsible-components' type='radio' name='collapsible'>
-          <label for="collapsible-components">Components</label>
-          <div class="collapsible-body">
-            <ul>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/alerts/'>Alerts</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/articles/'>Articles</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/badges/'>Badges</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/buttons/'>Buttons</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/cards/'>Cards</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/collapsible/'>Collapsibles</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/forms/'>Forms</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/modals/'>Modals</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/navbar/'>Navbar</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/popovers/'>Popovers</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/progress/'>Progress</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/tabs/'>Tabs</a>
-              </li>
-            
-            </ul>
-          </div>
-        </div>
-        
-        <div class='collapsible full-width'>
-          <input id='collapsible-content' type='radio' name='collapsible'>
-          <label for="collapsible-content">Content</label>
-          <div class="collapsible-body">
-            <ul>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/code/'>Code</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/images/'>Images</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/lists/'>Lists</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/tables/'>Tables</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/typography/'>Typography</a>
-              </li>
-            
-            </ul>
-          </div>
-        </div>
-        
-        <div class='collapsible full-width'>
-          <input id='collapsible-layout' type='radio' name='collapsible'>
-          <label for="collapsible-layout">Layout</label>
-          <div class="collapsible-body">
-            <ul>
-            
-              <li>
-                <a href='/fractal-tree/docs/layout/flexbox/'>Flexbox</a>
-              </li>
-            
-            </ul>
-          </div>
-        </div>
-        
-        <div class='collapsible full-width'>
-          <input id='collapsible-utilities' type='radio' name='collapsible'>
-          <label for="collapsible-utilities">Utilities</label>
-          <div class="collapsible-body">
-            <ul>
-            
-              <li>
-                <a href='/fractal-tree/docs/utilities/borders/'>Borders &amp; Shadows</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/utilities/colors/'>Colors</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/utilities/spacing/'>Spacing</a>
-              </li>
-            
-            </ul>
-          </div>
-        </div>
-        
-      </div>
-    </div>
+<div class='sm-12 md-12 col'>
     
     <div class='paper'>
       <div class="row flex-center">
