--- a/docs/docs/components/cards/index.html
+++ b/docs/docs/components/cards/index.html
@@ -27,8 +27,8 @@
   <link rel='canonical' href='https://cesium.github.io/fractal-tree/docs/components/cards/'>
 
   
-<link rel='stylesheet' href='assets/paper.min.css'>
-<link rel='stylesheet' href='assets/demo.css'>
+<link rel='stylesheet' href='https://cesium.github.io/fractal-tree/assets/paper.min.css'>
+<link rel='stylesheet' href='https://cesium.github.io/fractal-tree/assets/demo.css'>
 </head>
 
 
@@ -36,7 +36,7 @@
 
 <body>
   <div id='top' class='row site'>
-    <div class='sm-12 md-8 col'>
+    <div class='sm-12 md-12 col'>
         <div class='paper'>
           <div class='demo-title'>
             <div class='row flex-center'>
@@ -48,10 +48,9 @@
 
             <div class="row flex-center child-borders">
   <a class='paper-btn margin' href='/fractal-tree/'>Fractal Tree</a>
-  <a class='paper-btn margin' href='/fractal-tree/docs/'>Documentation</a>
   <a class='paper-btn margin' href='/fractal-tree/about/'>About Us</a>
   
-  <a href="https://github.com/rhyneav/papercss" target="_blank" class="paper-btn margin">Github</a>
+  <a href="https://github.com/cesium/fractal-tree" target="_blank" class="paper-btn margin">Github</a>
 </div>
 
           </div>
@@ -81,16 +80,16 @@
 </div>
 
 <h4 id="code">Code:</h4>
-<div class="highlight"><pre style="background-color:#f8f8f8;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card&#34;</span> <span style="color:#b44">style</span><span style="color:#666">=</span><span style="color:#b44">&#34;width: 20rem;&#34;</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">img</span> <span style="color:#b44">src</span><span style="color:#666">=</span><span style="color:#b44">&#34;https://picsum.photos/768&#34;</span> <span style="color:#b44">alt</span><span style="color:#666">=</span><span style="color:#b44">&#34;Card example image&#34;</span>&gt;
+<div class="highlight"><pre style="background-color:#fff;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;div class=<span style="color:#a31515">&#34;card&#34;</span> style=<span style="color:#a31515">&#34;width: 20rem;&#34;</span>&gt;
+  &lt;img src=<span style="color:#a31515">&#34;https://picsum.photos/768&#34;</span> alt=<span style="color:#a31515">&#34;Card example image&#34;</span>&gt;
 
-  &lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-body&#34;</span>&gt;
-    &lt;<span style="color:#008000;font-weight:bold">h4</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-title&#34;</span>&gt;My awesome Paper card!&lt;/<span style="color:#008000;font-weight:bold">h4</span>&gt;
-    &lt;<span style="color:#008000;font-weight:bold">h5</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-subtitle&#34;</span>&gt;Nice looking subtitle.&lt;/<span style="color:#008000;font-weight:bold">h5</span>&gt;
-    &lt;<span style="color:#008000;font-weight:bold">p</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-text&#34;</span>&gt;Notice that the card width in this example have been set to 20rem, otherwise it will try to fill the current container/row where the card is.&lt;/<span style="color:#008000;font-weight:bold">p</span>&gt;
-    &lt;<span style="color:#008000;font-weight:bold">button</span>&gt;Let me go here!&lt;/<span style="color:#008000;font-weight:bold">button</span>&gt;
-  &lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;
-&lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;</code></pre></div>
+  &lt;div class=<span style="color:#a31515">&#34;card-body&#34;</span>&gt;
+    &lt;h4 class=<span style="color:#a31515">&#34;card-title&#34;</span>&gt;My awesome Paper card!&lt;/h4&gt;
+    &lt;h5 class=<span style="color:#a31515">&#34;card-subtitle&#34;</span>&gt;Nice looking subtitle.&lt;/h5&gt;
+    &lt;p class=<span style="color:#a31515">&#34;card-text&#34;</span>&gt;Notice that the card width in this example have been set to 20rem, otherwise it will try to fill the current container/row where the card is.&lt;/p&gt;
+    &lt;button&gt;Let me go here!&lt;/button&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</code></pre></div>
 <h3 id="card-title-text-links">Card title, text, links</h3>
 
 <div class="row flex-center">
@@ -106,15 +105,15 @@
 </div>
 
 <h4 id="code-1">Code:</h4>
-<div class="highlight"><pre style="background-color:#f8f8f8;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card&#34;</span> <span style="color:#b44">style</span><span style="color:#666">=</span><span style="color:#b44">&#34;width: 20rem;&#34;</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-body&#34;</span>&gt;
-    &lt;<span style="color:#008000;font-weight:bold">h4</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-title&#34;</span>&gt;My awesome Paper card!&lt;/<span style="color:#008000;font-weight:bold">h4</span>&gt;
-    &lt;<span style="color:#008000;font-weight:bold">h5</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-subtitle&#34;</span>&gt;Nice looking subtitle.&lt;/<span style="color:#008000;font-weight:bold">h5</span>&gt;
-    &lt;<span style="color:#008000;font-weight:bold">p</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-text&#34;</span>&gt;This is another example of a card without image. Cards are also meant to be used without images, but with text/links/buttons.&lt;/<span style="color:#008000;font-weight:bold">p</span>&gt;
-    &lt;<span style="color:#008000;font-weight:bold">a</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-link&#34;</span> <span style="color:#b44">href</span><span style="color:#666">=</span><span style="color:#b44">&#34;#&#34;</span>&gt;First link&lt;/<span style="color:#008000;font-weight:bold">a</span>&gt;
-    &lt;<span style="color:#008000;font-weight:bold">a</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-link&#34;</span> <span style="color:#b44">href</span><span style="color:#666">=</span><span style="color:#b44">&#34;#&#34;</span>&gt;Second link&lt;/<span style="color:#008000;font-weight:bold">a</span>&gt;
-  &lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;
-&lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;</code></pre></div>
+<div class="highlight"><pre style="background-color:#fff;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;div class=<span style="color:#a31515">&#34;card&#34;</span> style=<span style="color:#a31515">&#34;width: 20rem;&#34;</span>&gt;
+  &lt;div class=<span style="color:#a31515">&#34;card-body&#34;</span>&gt;
+    &lt;h4 class=<span style="color:#a31515">&#34;card-title&#34;</span>&gt;My awesome Paper card!&lt;/h4&gt;
+    &lt;h5 class=<span style="color:#a31515">&#34;card-subtitle&#34;</span>&gt;Nice looking subtitle.&lt;/h5&gt;
+    &lt;p class=<span style="color:#a31515">&#34;card-text&#34;</span>&gt;This is another example of a card without image. Cards are also meant to be used without images, but with text/links/buttons.&lt;/p&gt;
+    &lt;a class=<span style="color:#a31515">&#34;card-link&#34;</span> href=<span style="color:#a31515">&#34;#&#34;</span>&gt;First link&lt;/a&gt;
+    &lt;a class=<span style="color:#a31515">&#34;card-link&#34;</span> href=<span style="color:#a31515">&#34;#&#34;</span>&gt;Second link&lt;/a&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</code></pre></div>
 <h3 id="image-on-top-or-bottom">Image on top or bottom</h3>
 
 <div class="row flex-center">
@@ -130,15 +129,15 @@
 </div>
 
 <h4 id="code-2">Code:</h4>
-<div class="highlight"><pre style="background-color:#f8f8f8;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card&#34;</span> <span style="color:#b44">style</span><span style="color:#666">=</span><span style="color:#b44">&#34;width: 20rem;&#34;</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-body&#34;</span>&gt;
-    &lt;<span style="color:#008000;font-weight:bold">h4</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-title&#34;</span>&gt;My awesome Paper card!&lt;/<span style="color:#008000;font-weight:bold">h4</span>&gt;
-    &lt;<span style="color:#008000;font-weight:bold">h5</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-subtitle&#34;</span>&gt;Nice looking subtitle.&lt;/<span style="color:#008000;font-weight:bold">h5</span>&gt;
-    &lt;<span style="color:#008000;font-weight:bold">p</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-text&#34;</span>&gt;You can also place image on the bottom of the card.&lt;/<span style="color:#008000;font-weight:bold">p</span>&gt;
-    &lt;<span style="color:#008000;font-weight:bold">button</span>&gt;Let me go here!&lt;/<span style="color:#008000;font-weight:bold">button</span>&gt;
-  &lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">img</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;image-bottom&#34;</span> <span style="color:#b44">src</span><span style="color:#666">=</span><span style="color:#b44">&#34;https://unsplash.it/550/250&#34;</span> <span style="color:#b44">alt</span><span style="color:#666">=</span><span style="color:#b44">&#34;Card example image&#34;</span>&gt;
-&lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;</code></pre></div>
+<div class="highlight"><pre style="background-color:#fff;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;div class=<span style="color:#a31515">&#34;card&#34;</span> style=<span style="color:#a31515">&#34;width: 20rem;&#34;</span>&gt;
+  &lt;div class=<span style="color:#a31515">&#34;card-body&#34;</span>&gt;
+    &lt;h4 class=<span style="color:#a31515">&#34;card-title&#34;</span>&gt;My awesome Paper card!&lt;/h4&gt;
+    &lt;h5 class=<span style="color:#a31515">&#34;card-subtitle&#34;</span>&gt;Nice looking subtitle.&lt;/h5&gt;
+    &lt;p class=<span style="color:#a31515">&#34;card-text&#34;</span>&gt;You can also place image on the bottom of the card.&lt;/p&gt;
+    &lt;button&gt;Let me go here!&lt;/button&gt;
+  &lt;/div&gt;
+  &lt;img class=<span style="color:#a31515">&#34;image-bottom&#34;</span> src=<span style="color:#a31515">&#34;https://unsplash.it/550/250&#34;</span> alt=<span style="color:#a31515">&#34;Card example image&#34;</span>&gt;
+&lt;/div&gt;</code></pre></div>
 <h3 id="header-and-footer">Header and footer</h3>
 
 <div class="row flex-center">
@@ -155,154 +154,22 @@
 </div>
 
 <h4 id="code-3">Code:</h4>
-<div class="highlight"><pre style="background-color:#f8f8f8;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card&#34;</span> <span style="color:#b44">style</span><span style="color:#666">=</span><span style="color:#b44">&#34;width: 20rem;&#34;</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-header&#34;</span>&gt;Header&lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;
-    &lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-body&#34;</span>&gt;
-      &lt;<span style="color:#008000;font-weight:bold">h4</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-title&#34;</span>&gt;My awesome Paper card!&lt;/<span style="color:#008000;font-weight:bold">h4</span>&gt;
-      &lt;<span style="color:#008000;font-weight:bold">h5</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-subtitle&#34;</span>&gt;Nice looking subtitle.&lt;/<span style="color:#008000;font-weight:bold">h5</span>&gt;
-      &lt;<span style="color:#008000;font-weight:bold">p</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-text&#34;</span>&gt;You can also place image on the bottom of the card.&lt;/<span style="color:#008000;font-weight:bold">p</span>&gt;
-      &lt;<span style="color:#008000;font-weight:bold">button</span>&gt;Let me go here!&lt;/<span style="color:#008000;font-weight:bold">button</span>&gt;
-    &lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;
-  &lt;<span style="color:#008000;font-weight:bold">div</span> <span style="color:#b44">class</span><span style="color:#666">=</span><span style="color:#b44">&#34;card-footer&#34;</span>&gt;Footer&lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;
-&lt;/<span style="color:#008000;font-weight:bold">div</span>&gt;</code></pre></div>
+<div class="highlight"><pre style="background-color:#fff;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;div class=<span style="color:#a31515">&#34;card&#34;</span> style=<span style="color:#a31515">&#34;width: 20rem;&#34;</span>&gt;
+  &lt;div class=<span style="color:#a31515">&#34;card-header&#34;</span>&gt;Header&lt;/div&gt;
+    &lt;div class=<span style="color:#a31515">&#34;card-body&#34;</span>&gt;
+      &lt;h4 class=<span style="color:#a31515">&#34;card-title&#34;</span>&gt;My awesome Paper card!&lt;/h4&gt;
+      &lt;h5 class=<span style="color:#a31515">&#34;card-subtitle&#34;</span>&gt;Nice looking subtitle.&lt;/h5&gt;
+      &lt;p class=<span style="color:#a31515">&#34;card-text&#34;</span>&gt;You can also place image on the bottom of the card.&lt;/p&gt;
+      &lt;button&gt;Let me go here!&lt;/button&gt;
+    &lt;/div&gt;
+  &lt;div class=<span style="color:#a31515">&#34;card-footer&#34;</span>&gt;Footer&lt;/div&gt;
+&lt;/div&gt;</code></pre></div>
 </div>
 
         </div>
     </div>
-    <div class='sm-12 md-4 col sidebar'>
     
-    <div class='paper'>
-      <h3 class='sidebar-title' style='text-align:center'>
-        <a href='/docs'>Documentation</a>
-      </h3>
-      <div class='row'>
-        
-        <div class='collapsible full-width'>
-          <input id='collapsible-components' type='radio' name='collapsible'>
-          <label for="collapsible-components">Components</label>
-          <div class="collapsible-body">
-            <ul>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/alerts/'>Alerts</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/articles/'>Articles</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/badges/'>Badges</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/buttons/'>Buttons</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/cards/'>Cards</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/collapsible/'>Collapsibles</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/forms/'>Forms</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/modals/'>Modals</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/navbar/'>Navbar</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/popovers/'>Popovers</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/progress/'>Progress</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/components/tabs/'>Tabs</a>
-              </li>
-            
-            </ul>
-          </div>
-        </div>
-        
-        <div class='collapsible full-width'>
-          <input id='collapsible-content' type='radio' name='collapsible'>
-          <label for="collapsible-content">Content</label>
-          <div class="collapsible-body">
-            <ul>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/code/'>Code</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/images/'>Images</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/lists/'>Lists</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/tables/'>Tables</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/content/typography/'>Typography</a>
-              </li>
-            
-            </ul>
-          </div>
-        </div>
-        
-        <div class='collapsible full-width'>
-          <input id='collapsible-layout' type='radio' name='collapsible'>
-          <label for="collapsible-layout">Layout</label>
-          <div class="collapsible-body">
-            <ul>
-            
-              <li>
-                <a href='/fractal-tree/docs/layout/flexbox/'>Flexbox</a>
-              </li>
-            
-            </ul>
-          </div>
-        </div>
-        
-        <div class='collapsible full-width'>
-          <input id='collapsible-utilities' type='radio' name='collapsible'>
-          <label for="collapsible-utilities">Utilities</label>
-          <div class="collapsible-body">
-            <ul>
-            
-              <li>
-                <a href='/fractal-tree/docs/utilities/borders/'>Borders &amp; Shadows</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/utilities/colors/'>Colors</a>
-              </li>
-            
-              <li>
-                <a href='/fractal-tree/docs/utilities/spacing/'>Spacing</a>
-              </li>
-            
-            </ul>
-          </div>
-        </div>
-        
-      </div>
-    </div>
+<div class='sm-12 md-12 col'>
     
     <div class='paper'>
       <div class="row flex-center">
